// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with 1 expense 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expenseCount={1}
    expensesTotal={235}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="content-container"
>
        <h1
                className="page-header__title"
        >
                Viewing 
                <span>
                        1
                </span>
                 
                expense
                 totaling 
                <span>
                        $2.35
                </span>
        </h1>
        <div
                className="page-header__actions"
        >
                <Link
                        className="button"
                        replace={false}
                        to="/create"
                >
                        Add Expense
                </Link>
        </div>
</div>,
      "className": "page-header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-header__title"
>
            Viewing 
            <span>
                        1
            </span>
             
            expense
             totaling 
            <span>
                        $2.35
            </span>
</h1>,
          <div
            className="page-header__actions"
>
            <Link
                        className="button"
                        replace={false}
                        to="/create"
            >
                        Add Expense
            </Link>
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Viewing ",
              <span>
                1
</span>,
              " ",
              "expense",
              " totaling ",
              <span>
                $2.35
</span>,
            ],
            "className": "page-header__title",
          },
          "ref": null,
          "rendered": Array [
            "Viewing ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 1,
              },
              "ref": null,
              "rendered": 1,
              "type": "span",
            },
            " ",
            "expense",
            " totaling ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$2.35",
              },
              "ref": null,
              "rendered": "$2.35",
              "type": "span",
            },
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="button"
              replace={false}
              to="/create"
>
              Add Expense
</Link>,
            "className": "page-header__actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Add Expense",
              "className": "button",
              "replace": false,
              "to": "/create",
            },
            "ref": null,
            "rendered": "Add Expense",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="content-container"
>
          <h1
                    className="page-header__title"
          >
                    Viewing 
                    <span>
                              1
                    </span>
                     
                    expense
                     totaling 
                    <span>
                              $2.35
                    </span>
          </h1>
          <div
                    className="page-header__actions"
          >
                    <Link
                              className="button"
                              replace={false}
                              to="/create"
                    >
                              Add Expense
                    </Link>
          </div>
</div>,
        "className": "page-header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="page-header__title"
>
              Viewing 
              <span>
                            1
              </span>
               
              expense
               totaling 
              <span>
                            $2.35
              </span>
</h1>,
            <div
              className="page-header__actions"
>
              <Link
                            className="button"
                            replace={false}
                            to="/create"
              >
                            Add Expense
              </Link>
</div>,
          ],
          "className": "content-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Viewing ",
                <span>
                  1
</span>,
                " ",
                "expense",
                " totaling ",
                <span>
                  $2.35
</span>,
              ],
              "className": "page-header__title",
            },
            "ref": null,
            "rendered": Array [
              "Viewing ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 1,
                },
                "ref": null,
                "rendered": 1,
                "type": "span",
              },
              " ",
              "expense",
              " totaling ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "$2.35",
                },
                "ref": null,
                "rendered": "$2.35",
                "type": "span",
              },
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="button"
                replace={false}
                to="/create"
>
                Add Expense
</Link>,
              "className": "page-header__actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Add Expense",
                "className": "button",
                "replace": false,
                "to": "/create",
              },
              "ref": null,
              "rendered": "Add Expense",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should correctly render expenses summary with multiple expenses 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpensesSummary
    expenseCount={23}
    expensesTotal={235123213}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="content-container"
>
        <h1
                className="page-header__title"
        >
                Viewing 
                <span>
                        23
                </span>
                 
                expenses
                 totaling 
                <span>
                        $2,351,232.13
                </span>
        </h1>
        <div
                className="page-header__actions"
        >
                <Link
                        className="button"
                        replace={false}
                        to="/create"
                >
                        Add Expense
                </Link>
        </div>
</div>,
      "className": "page-header",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="page-header__title"
>
            Viewing 
            <span>
                        23
            </span>
             
            expenses
             totaling 
            <span>
                        $2,351,232.13
            </span>
</h1>,
          <div
            className="page-header__actions"
>
            <Link
                        className="button"
                        replace={false}
                        to="/create"
            >
                        Add Expense
            </Link>
</div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Viewing ",
              <span>
                23
</span>,
              " ",
              "expenses",
              " totaling ",
              <span>
                $2,351,232.13
</span>,
            ],
            "className": "page-header__title",
          },
          "ref": null,
          "rendered": Array [
            "Viewing ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 23,
              },
              "ref": null,
              "rendered": 23,
              "type": "span",
            },
            " ",
            "expenses",
            " totaling ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "$2,351,232.13",
              },
              "ref": null,
              "rendered": "$2,351,232.13",
              "type": "span",
            },
          ],
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="button"
              replace={false}
              to="/create"
>
              Add Expense
</Link>,
            "className": "page-header__actions",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Add Expense",
              "className": "button",
              "replace": false,
              "to": "/create",
            },
            "ref": null,
            "rendered": "Add Expense",
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="content-container"
>
          <h1
                    className="page-header__title"
          >
                    Viewing 
                    <span>
                              23
                    </span>
                     
                    expenses
                     totaling 
                    <span>
                              $2,351,232.13
                    </span>
          </h1>
          <div
                    className="page-header__actions"
          >
                    <Link
                              className="button"
                              replace={false}
                              to="/create"
                    >
                              Add Expense
                    </Link>
          </div>
</div>,
        "className": "page-header",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="page-header__title"
>
              Viewing 
              <span>
                            23
              </span>
               
              expenses
               totaling 
              <span>
                            $2,351,232.13
              </span>
</h1>,
            <div
              className="page-header__actions"
>
              <Link
                            className="button"
                            replace={false}
                            to="/create"
              >
                            Add Expense
              </Link>
</div>,
          ],
          "className": "content-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Viewing ",
                <span>
                  23
</span>,
                " ",
                "expenses",
                " totaling ",
                <span>
                  $2,351,232.13
</span>,
              ],
              "className": "page-header__title",
            },
            "ref": null,
            "rendered": Array [
              "Viewing ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 23,
                },
                "ref": null,
                "rendered": 23,
                "type": "span",
              },
              " ",
              "expenses",
              " totaling ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "$2,351,232.13",
                },
                "ref": null,
                "rendered": "$2,351,232.13",
                "type": "span",
              },
            ],
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                className="button"
                replace={false}
                to="/create"
>
                Add Expense
</Link>,
              "className": "page-header__actions",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Add Expense",
                "className": "button",
                "replace": false,
                "to": "/create",
              },
              "ref": null,
              "rendered": "Add Expense",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
